# led_flight_tracker

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  test_opensky_api.py
.claude/: settings.local.json
components/app_config/: CMakeLists.txt  app_config.cpp
components/app_config/include/: app_config.h
components/display/: CMakeLists.txt  led_matrix.cpp  screen_manager.cpp
components/display/include/: led_matrix.h  screen_manager.h
components/display/screens/: base_screen.cpp  base_screen.h  clock_screen.cpp  clock_screen.h  fireworks_screen.cpp  fireworks_screen.h  flight_screen.cpp  flight_screen.h  info_screen.cpp  info_screen.h  spectrum_screen.cpp  spectrum_screen.h
components/input/: CMakeLists.txt  button.cpp
components/input/include/: button.h
components/network/: CMakeLists.txt  flight_api.cpp  flight_api_test.cpp
components/network/include/: flight_api.h  flight_api_test.h
components/sensors/: CMakeLists.txt  fft.cpp  fft.h  microphone.cpp
components/sensors/include/: microphone.h
components/utils/: CMakeLists.txt  log.cpp  time_sync.cpp  timer.cpp
components/utils/include/: log.h  time_sync.h  timer.h  types.h
components/web_server/: CMakeLists.txt  web_server.cpp
components/web_server/include/: web_server.h
components/web_server/pages/: index.html  script.js  settings.html  style.css
components/wifi_manager/: CMakeLists.txt  wifi_manager.cpp
components/wifi_manager/include/: wifi_manager.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
